--- a/color-wars/src/App.css
+++ b/color-wars/src/App.css
@@ -149,14 +149,12 @@
 @media (min-width: 1366px) {
   .app-container {
     grid-template-columns: 300px 2fr 400px;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto auto ;
     grid-template-areas: 
-      "chat hex-grid game-info"
-      "chat dice game-info"
-      "chat dice-track game-info";
+      "hex-grid hex-grid game-info"
+      "hex-grid hex-grid game-info";
     gap: 1rem;
     padding: 1rem;
-    margin: 0 auto;
     max-width: 1600px;
   }
 }
