--- a/color-wars/src/components/HollowGrid.module.css
+++ b/color-wars/src/components/HollowGrid.module.css
@@ -41,8 +41,8 @@
 .gridSvg {
   position: absolute;
   top: -20px;
-  left: -10px;
-  width: calc(100% + 20px);
+  left: -15px;
+  width: calc(100% + 30px);
   height: calc(100% + 20px);
   z-index: 2;
   /* SVG doesn't block PixiJS interactions */
@@ -57,7 +57,7 @@
    =================================== */
 
 /* Individual hex cells can be clicked */
-.gridSvg polygon {
+.gridSvg path {
   pointer-events: auto;
 }
 
