--- a/color-wars/src/components/HollowGrid.module.css
+++ b/color-wars/src/components/HollowGrid.module.css
@@ -40,10 +40,10 @@
 
 .gridSvg {
   position: absolute;
-  top: -20px;
-  left: -20px;
-  width: calc(100% + 20px);
-  height: calc(100% + 20px);
+  top: 0;
+  left: 0;
+  width: calc(100%);
+  height: calc(100%);
   z-index: 2;
   /* SVG doesn't block PixiJS interactions */
   pointer-events: none;
