client game loop v0.1

--- a/color-wars/src/components/DiceTrack.module.css
+++ b/color-wars/src/components/DiceTrack.module.css
@@ -57,8 +57,10 @@
    =================================== */
 
 /* Individual hex cells can be clicked */
-.gridSvg path {
-  pointer-events: auto;
+.gridSvg path,
+.gridSvg circle,
+.gridSvg text {
+  pointer-events: none;
 }
 
 
