--- a/client/src/pages/RoomPage.css
+++ b/client/src/pages/RoomPage.css
@@ -1,6 +1,6 @@
 .room-page {
   min-height: 100vh;
-  background: #0f0f23;
+  background: #222;
   display: flex;
   flex-direction: column;
 }
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  padding: 2rem;
+  /* padding: 2rem; */
   align-items: center;
   overflow-y: auto;
 }
